# rc-car

./: .gitignore  README.md
CAD/: Camera_Mount_03.SLDPRT  Lid.sldprt  Part2.sldprt  Part_1.sldprt  RCbodyFull.SLDPRT  RCframeMM.SLDASM  RCframeMM1.sldprt  RCframeMM10.sldprt  RCframeMM11.sldprt  RCframeMM12.sldprt  RCframeMM2.sldprt  RCframeMM3.sldprt  RCframeMM4.sldprt  RCframeMM5.sldprt  RCframeMM6.sldprt  RCframeMM7.sldprt  RCframeMM8.sldprt  RCframeMM9.sldprt  US_Mount_IGS.SLDPRT  Ultrasonic Sensor.SLDPRT  UltrasonicSensorMount.SLDPRT  cover_top.SLDPRT  mercedes_truck_shape.SLDPRT  mid_part.SLDPRT  new_base.SLDPRT  rear_mount.SLDPRT  rear_mount_02.SLDPRT  side_bumper.SLDPRT  truck_shape.SLDPRT  ~$RCframeMM.SLDASM
Docs/: DuePWM.pptx
PCB/: RC.pcb  RC2.pcb  RCRewire (PCB - Design Rule Check Report).txt  RCRewire.fab  RCRewire.pcb  ~RC2.pcb  ~RCRewire.pcb
PWM_INOUT_ULTRASONIC16.4_Agoila_testdrive/: Add_Channels3and4.xlsx  Drive.h  PWM_INOUT_ULTRASONIC16.4_Agoila_testdrive.ino  Semaphore.h  Ultrasonic.h
SW/Raspberry-Pi/: README.md  (+2 more)
SW/Raspberry-Pi/LaneRecog_PI_CntrlIntl/: CMakeCache.txt  CMakeLists.txt  Kalman_Filter.cpp  Kalman_filter.h  LaneRecog  Makefile  Sign_Reg.cpp  Sign_Reg.h  TaskScheduling_PI.cpp  cmake_install.cmake  cntrl_limits.h  decision_making.cpp  decision_making.h  er.txt  lane_recog.cpp  lane_recog.h  limits.h  obstacle_detection.cpp  obstacle_detection.h  result.txt  serialcmd-onestep.py  serialcmd.py  trace.txt
integrate_ACC_Car2_IMU_Read/: ACC.h  Output.ino  Razor_AHRS.ino  Ultrasonic.h  calibration_ex.txt  integrate_ACC_Car2_IMU_Read.ino
(+50 files in other folders)
