cmake_minimum_required(VERSION 2.8)
project( LaneRecog )
set(THREADS_PREFER_PTHREAD_FLAG ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
set(CMAKE_MODULE_PATH${CMAKE_MODULE_PATH} /usr/local/lib/cmake/)
find_package( OpenCV REQUIRED )
find_package( raspicam REQUIRED )
find_package( OpenMP REQUIRED )
find_package( Threads REQUIRED )

if(OPENMP_FOUND)
	message("OPENMP FOUND")
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

add_executable( LaneRecog TaskScheduling_PI.cpp	lane_recog.cpp decision_making.cpp Sign_Reg.cpp obstacle_detection.cpp)
target_link_libraries( LaneRecog ${OpenCV_LIBS} ${OpenMP_LIBS} ${CMAKE_THREAD_LIBS_INI} ${raspicam_LIBS} ${raspicam_CV_LIBS} -lrt )
